trunk/Archive2/83/ab6f757e33a466/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:5: error: static assertion failed: An array is not the same as a reference to an array
     static_assert(is_same<int[], int(&)[]>::value, "An array is not the same as a reference to an array");
     ^
